<resources>
    <string name="app_name">probando1</string>
    <string name="nuevo_donante">Nuevo Donante</string>
    <string name="no_de_identificaci_n">No. de identificación</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="estatura_cm">Estatura (cm)</string>
    <string name="bienvenido_al_control_de_donantes">Bienvenido al Control de Donantes</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="donantes_tool">Control de Donantes</string>
    <string name="donante_tool">Donantes</string>
    <string name="no_identificacion">No. Identificacion</string>
    <string name="id_del_donante_a_buscar">Id del donante a buscar</string>
    <string name="cambiar_contase_a">Cambiar contraseña</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="verificar_contrase_a">Verificar Contraseña</string>


    <string-array name="tipoSangre">
        <item>Tipo A</item>
        <item>Tipo B</item>
        <item>Tipo O</item>
        <item>Tipo AB</item>
    </string-array>

    <string-array name="tipoRh">
        <item>Rh +</item>
        <item>Rh -</item>
    </string-array>

</resources>
